parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> entrada
Rule 1     entrada -> entrada create_type
Rule 2     entrada -> entrada create_db
Rule 3     entrada -> entrada show_db
Rule 4     entrada -> entrada alter_db
Rule 5     entrada -> entrada drop_db
Rule 6     entrada -> entrada create_table
Rule 7     entrada -> entrada drop_table
Rule 8     entrada -> entrada alter_table
Rule 9     entrada -> entrada s_delete
Rule 10    entrada -> entrada s_insert
Rule 11    entrada -> entrada s_update
Rule 12    entrada -> entrada s_select
Rule 13    entrada -> create_type
Rule 14    entrada -> create_db
Rule 15    entrada -> show_db
Rule 16    entrada -> alter_db
Rule 17    entrada -> drop_db
Rule 18    entrada -> create_table
Rule 19    entrada -> drop_table
Rule 20    entrada -> alter_table
Rule 21    entrada -> s_delete
Rule 22    entrada -> s_insert
Rule 23    entrada -> s_update
Rule 24    entrada -> s_select
Rule 25    s_select -> SELECT MULTI FROM ID PTCOMA
Rule 26    create_type -> CREATE TYPE ID AS c_type PTCOMA
Rule 27    c_type -> ENUM PARIZQ lista
Rule 28    c_type -> PARIZQ lista
Rule 29    lista -> id_cadena lista1
Rule 30    lista1 -> lista1 COMA id_cadena
Rule 31    lista1 -> lista1 PARDER
Rule 32    lista1 -> COMA id_cadena
Rule 33    lista1 -> PARDER
Rule 34    id_cadena -> ID data_type
Rule 35    id_cadena -> CADENA
Rule 36    data_type -> NUMERIC
Rule 37    data_type -> INTEGER
Rule 38    data_type -> TEXT
Rule 39    data_type -> SMALLINT
Rule 40    data_type -> BEGINT
Rule 41    data_type -> DECIMAL
Rule 42    data_type -> REAL
Rule 43    data_type -> DOUBLE PRECISION
Rule 44    data_type -> MONEY
Rule 45    data_type -> CHARACTER VARYING PARIZQ ENTERO PARDER
Rule 46    data_type -> VARCHAR PARIZQ ENTERO PARDER
Rule 47    data_type -> CHARACTER PARIZQ ENTERO PARDER
Rule 48    data_type -> CHAR PARIZQ ENTERO PARDER
Rule 49    data_type -> TIMESTAMP
Rule 50    data_type -> TIMESTAMP time_zone
Rule 51    data_type -> DATA
Rule 52    data_type -> TIME
Rule 53    data_type -> TIME time_zone
Rule 54    data_type -> INTERVAL
Rule 55    time_zone -> WITH TIME ZONE
Rule 56    time_zone -> WITHOUT TIME ZONE
Rule 57    create_db -> CREATE c_db
Rule 58    c_db -> OR REPLACE DATABASE c_db1
Rule 59    c_db -> DATABASE c_db1
Rule 60    c_db1 -> IF NOT EXISTS ID owner_mode
Rule 61    c_db1 -> ID owner_mode
Rule 62    owner_mode -> owner_mode OWNER igual_id
Rule 63    owner_mode -> owner_mode MODE igual_id
Rule 64    owner_mode -> owner_mode PTCOMA
Rule 65    owner_mode -> OWNER igual_id
Rule 66    owner_mode -> MODE igual_id
Rule 67    owner_mode -> PTCOMA
Rule 68    igual_id -> IGUAL ID
Rule 69    igual_id -> ID
Rule 70    show_db -> SHOW DATABASES like_id
Rule 71    like_id -> LIKE ID PTCOMA
Rule 72    like_id -> PTCOMA
Rule 73    alter_db -> ALTER DATABASE ID al_db PTCOMA
Rule 74    al_db -> RENAME TO ID
Rule 75    al_db -> OWNER TO owner_db
Rule 76    owner_db -> ID
Rule 77    owner_db -> CURRENT_USER
Rule 78    owner_db -> SESSION_USER
Rule 79    drop_db -> DROP DATABASE PTCOMA
Rule 80    drop_db -> DROP DATABASE IF EXISTS PTCOMA
Rule 81    create_table -> CREATE TABLE ID PARIZQ values PARDER PTCOMA
Rule 82    values -> colum_list
Rule 83    values -> colum_list COMA const_keys
Rule 84    colum_list -> colum_list COMA ID data_type
Rule 85    colum_list -> colum_list COMA ID data_type const
Rule 86    colum_list -> ID data_type
Rule 87    colum_list -> ID data_type const
Rule 88    const_keys -> const_keys COMA PRIMARY KEY PARIZQ lista_id PARDER
Rule 89    const_keys -> const_keys COMA FOREIGN KEY PARIZQ PARDER REFERENCES PARIZQ lista_id PARDER
Rule 90    const_keys -> PRIMARY KEY PARIZQ lista_id PARDER
Rule 91    const_keys -> FOREIGN KEY PARIZQ PARDER REFERENCES PARIZQ lista_id PARDER
Rule 92    const -> const DEFAULT val
Rule 93    const -> const NOT NULL
Rule 94    const -> const NULL
Rule 95    const -> const CONSTRAINT ID UNIQUE
Rule 96    const -> const UNIQUE
Rule 97    const -> const CONSTRAINT ID CHECK PARIZQ PARDER
Rule 98    const -> const CHECK PARIZQ PARDER
Rule 99    const -> const PRIMARY KEY
Rule 100   const -> const REFERENCES ID
Rule 101   const -> DEFAULT val
Rule 102   const -> NOT NULL
Rule 103   const -> NULL
Rule 104   const -> CONSTRAINT ID UNIQUE
Rule 105   const -> UNIQUE
Rule 106   const -> CONSTRAINT ID CHECK PARIZQ PARDER
Rule 107   const -> CHECK PARIZQ PARDER
Rule 108   const -> PRIMARY KEY
Rule 109   const -> REFERENCES ID
Rule 110   lista_id -> lista_id COMA ID
Rule 111   lista_id -> ID
Rule 112   val -> ENTERO
Rule 113   drop_table -> DROP TABLE ID PTCOMA
Rule 114   alter_table -> ALTER TABLE ID acciones
Rule 115   acciones -> ADD acc
Rule 116   acciones -> ALTER COLUMN ID TYPE data_type
Rule 117   acciones -> DROP CONSTRAINT ID
Rule 118   acciones -> RENAME COLUMN ID TO ID
Rule 119   acc -> const
Rule 120   acc -> const_keys
Rule 121   s_delete -> DELETE FROM ID PTCOMA
Rule 122   s_delete -> DELETE FROM ID WHERE ID IGUAL expresion PTCOMA
Rule 123   s_insert -> INSERT INTO ID PARIZQ lista_id PARDER VALUES lista_values PTCOMA
Rule 124   lista_values -> lista_values COMA PARIZQ lista_valores PARDER
Rule 125   lista_values -> PARIZQ lista_valores PARDER
Rule 126   lista_valores -> lista_valores COMA valores
Rule 127   lista_valores -> valores
Rule 128   valores -> CADENA
Rule 129   valores -> ENTERO
Rule 130   valores -> DECIMA
Rule 131   s_update -> UPDATE ID SET lista_asig PTCOMA
Rule 132   s_update -> UPDATE ID SET lista_asig WHERE ID IGUAL expresion PTCOMA
Rule 133   lista_asig -> lista_asig COMA ID IGUAL valores
Rule 134   lista_asig -> ID IGUAL valores
Rule 135   expresion -> NOT expresion
Rule 136   expresion -> expresion OR expresion
Rule 137   expresion -> expresion AND expresion
Rule 138   expresion -> expresion MAYOR expresion
Rule 139   expresion -> expresion MENOR expresion
Rule 140   expresion -> expresion MAYIG expresion
Rule 141   expresion -> expresion MENIG expresion
Rule 142   expresion -> expresion IGUAQ expresion
Rule 143   expresion -> expresion DIFEQ expresion
Rule 144   expresion -> MENOS expresion
Rule 145   expresion -> SUMAS expresion
Rule 146   expresion -> expresion POTEN expresion
Rule 147   expresion -> expresion MULTI expresion
Rule 148   expresion -> expresion DIVIS expresion
Rule 149   expresion -> expresion SUMAS expresion
Rule 150   expresion -> expresion MENOS expresion
Rule 151   expresion -> PARIZQ expresion PARDER
Rule 152   expresion -> SUM PARIZQ expresion PARDER
Rule 153   expresion -> AVG PARIZQ expresion PARDER
Rule 154   expresion -> MAX PARIZQ expresion PARDER
Rule 155   expresion -> PI
Rule 156   expresion -> POWER PARIZQ expresion PARDER
Rule 157   expresion -> SQRT PARIZQ expresion PARDER
Rule 158   expresion -> valores

Terminals, with rules where they appear

ADD                  : 115
ALTER                : 73 114 116
AND                  : 137
AS                   : 26
AVG                  : 153
BEGINT               : 40
CADENA               : 35 128
CHAR                 : 48
CHARACTER            : 45 47
CHECK                : 97 98 106 107
COLUMN               : 116 118
COMA                 : 30 32 83 84 85 88 89 110 124 126 133
CONSTRAINT           : 95 97 104 106 117
CREATE               : 26 57 81
CURRENT_USER         : 77
DATA                 : 51
DATABASE             : 58 59 73 79 80
DATABASES            : 70
DECIMA               : 130
DECIMAL              : 41
DEFAULT              : 92 101
DELETE               : 121 122
DIFEQ                : 143
DIVIS                : 148
DOUBLE               : 43
DROP                 : 79 80 113 117
ENTERO               : 45 46 47 48 112 129
ENUM                 : 27
EXISTS               : 60 80
FOREIGN              : 89 91
FROM                 : 25 121 122
ID                   : 25 26 34 60 61 68 69 71 73 74 76 81 84 85 86 87 95 97 100 104 106 109 110 111 113 114 116 117 118 118 121 122 122 123 131 132 132 133 134
IF                   : 60 80
IGUAL                : 68 122 132 133 134
IGUAQ                : 142
INSERT               : 123
INTEGER              : 37
INTERVAL             : 54
INTO                 : 123
KEY                  : 88 89 90 91 99 108
LIKE                 : 71
MAX                  : 154
MAYIG                : 140
MAYOR                : 138
MENIG                : 141
MENOR                : 139
MENOS                : 144 150
MODE                 : 63 66
MONEY                : 44
MULTI                : 25 147
NOT                  : 60 93 102 135
NULL                 : 93 94 102 103
NUMERIC              : 36
OR                   : 58 136
OWNER                : 62 65 75
PARDER               : 31 33 45 46 47 48 81 88 89 89 90 91 91 97 98 106 107 123 124 125 151 152 153 154 156 157
PARIZQ               : 27 28 45 46 47 48 81 88 89 89 90 91 91 97 98 106 107 123 124 125 151 152 153 154 156 157
PI                   : 155
POTEN                : 146
POWER                : 156
PRECISION            : 43
PRIMARY              : 88 90 99 108
PTCOMA               : 25 26 64 67 71 72 73 79 80 81 113 121 122 123 131 132
REAL                 : 42
REFERENCES           : 89 91 100 109
RENAME               : 74 118
REPLACE              : 58
SELECT               : 25
SESSION_USER         : 78
SET                  : 131 132
SHOW                 : 70
SMALLINT             : 39
SQRT                 : 157
SUM                  : 152
SUMAS                : 145 149
TABLE                : 81 113 114
TEXT                 : 38
TIME                 : 52 53 55 56
TIMESTAMP            : 49 50
TO                   : 74 75 118
TYPE                 : 26 116
UNIQUE               : 95 96 104 105
UPDATE               : 131 132
VALUES               : 123
VARCHAR              : 46
VARYING              : 45
WHERE                : 122 132
WITH                 : 55
WITHOUT              : 56
ZONE                 : 55 56
error                : 

Nonterminals, with rules where they appear

acc                  : 115
acciones             : 114
al_db                : 73
alter_db             : 4 16
alter_table          : 8 20
c_db                 : 57
c_db1                : 58 59
c_type               : 26
colum_list           : 82 83 84 85
const                : 85 87 92 93 94 95 96 97 98 99 100 119
const_keys           : 83 88 89 120
create_db            : 2 14
create_table         : 6 18
create_type          : 1 13
data_type            : 34 84 85 86 87 116
drop_db              : 5 17
drop_table           : 7 19
entrada              : 1 2 3 4 5 6 7 8 9 10 11 12 0
expresion            : 122 132 135 136 136 137 137 138 138 139 139 140 140 141 141 142 142 143 143 144 145 146 146 147 147 148 148 149 149 150 150 151 152 153 154 156 157
id_cadena            : 29 30 32
igual_id             : 62 63 65 66
like_id              : 70
lista                : 27 28
lista1               : 29 30 31
lista_asig           : 131 132 133
lista_id             : 88 89 90 91 110 123
lista_valores        : 124 125 126
lista_values         : 123 124
owner_db             : 75
owner_mode           : 60 61 62 63 64
s_delete             : 9 21
s_insert             : 10 22
s_select             : 12 24
s_update             : 11 23
show_db              : 3 15
time_zone            : 50 53
val                  : 92 101
valores              : 126 127 133 134 158
values               : 81

Parsing method: LALR

state 0

    (0) S' -> . entrada
    (1) entrada -> . entrada create_type
    (2) entrada -> . entrada create_db
    (3) entrada -> . entrada show_db
    (4) entrada -> . entrada alter_db
    (5) entrada -> . entrada drop_db
    (6) entrada -> . entrada create_table
    (7) entrada -> . entrada drop_table
    (8) entrada -> . entrada alter_table
    (9) entrada -> . entrada s_delete
    (10) entrada -> . entrada s_insert
    (11) entrada -> . entrada s_update
    (12) entrada -> . entrada s_select
    (13) entrada -> . create_type
    (14) entrada -> . create_db
    (15) entrada -> . show_db
    (16) entrada -> . alter_db
    (17) entrada -> . drop_db
    (18) entrada -> . create_table
    (19) entrada -> . drop_table
    (20) entrada -> . alter_table
    (21) entrada -> . s_delete
    (22) entrada -> . s_insert
    (23) entrada -> . s_update
    (24) entrada -> . s_select
    (26) create_type -> . CREATE TYPE ID AS c_type PTCOMA
    (57) create_db -> . CREATE c_db
    (70) show_db -> . SHOW DATABASES like_id
    (73) alter_db -> . ALTER DATABASE ID al_db PTCOMA
    (79) drop_db -> . DROP DATABASE PTCOMA
    (80) drop_db -> . DROP DATABASE IF EXISTS PTCOMA
    (81) create_table -> . CREATE TABLE ID PARIZQ values PARDER PTCOMA
    (113) drop_table -> . DROP TABLE ID PTCOMA
    (114) alter_table -> . ALTER TABLE ID acciones
    (121) s_delete -> . DELETE FROM ID PTCOMA
    (122) s_delete -> . DELETE FROM ID WHERE ID IGUAL expresion PTCOMA
    (123) s_insert -> . INSERT INTO ID PARIZQ lista_id PARDER VALUES lista_values PTCOMA
    (131) s_update -> . UPDATE ID SET lista_asig PTCOMA
    (132) s_update -> . UPDATE ID SET lista_asig WHERE ID IGUAL expresion PTCOMA
    (25) s_select -> . SELECT MULTI FROM ID PTCOMA

    CREATE          shift and go to state 14
    SHOW            shift and go to state 15
    ALTER           shift and go to state 16
    DROP            shift and go to state 17
    DELETE          shift and go to state 18
    INSERT          shift and go to state 19
    UPDATE          shift and go to state 20
    SELECT          shift and go to state 21

    entrada                        shift and go to state 1
    create_type                    shift and go to state 2
    create_db                      shift and go to state 3
    show_db                        shift and go to state 4
    alter_db                       shift and go to state 5
    drop_db                        shift and go to state 6
    create_table                   shift and go to state 7
    drop_table                     shift and go to state 8
    alter_table                    shift and go to state 9
    s_delete                       shift and go to state 10
    s_insert                       shift and go to state 11
    s_update                       shift and go to state 12
    s_select                       shift and go to state 13

state 1

    (0) S' -> entrada .
    (1) entrada -> entrada . create_type
    (2) entrada -> entrada . create_db
    (3) entrada -> entrada . show_db
    (4) entrada -> entrada . alter_db
    (5) entrada -> entrada . drop_db
    (6) entrada -> entrada . create_table
    (7) entrada -> entrada . drop_table
    (8) entrada -> entrada . alter_table
    (9) entrada -> entrada . s_delete
    (10) entrada -> entrada . s_insert
    (11) entrada -> entrada . s_update
    (12) entrada -> entrada . s_select
    (26) create_type -> . CREATE TYPE ID AS c_type PTCOMA
    (57) create_db -> . CREATE c_db
    (70) show_db -> . SHOW DATABASES like_id
    (73) alter_db -> . ALTER DATABASE ID al_db PTCOMA
    (79) drop_db -> . DROP DATABASE PTCOMA
    (80) drop_db -> . DROP DATABASE IF EXISTS PTCOMA
    (81) create_table -> . CREATE TABLE ID PARIZQ values PARDER PTCOMA
    (113) drop_table -> . DROP TABLE ID PTCOMA
    (114) alter_table -> . ALTER TABLE ID acciones
    (121) s_delete -> . DELETE FROM ID PTCOMA
    (122) s_delete -> . DELETE FROM ID WHERE ID IGUAL expresion PTCOMA
    (123) s_insert -> . INSERT INTO ID PARIZQ lista_id PARDER VALUES lista_values PTCOMA
    (131) s_update -> . UPDATE ID SET lista_asig PTCOMA
    (132) s_update -> . UPDATE ID SET lista_asig WHERE ID IGUAL expresion PTCOMA
    (25) s_select -> . SELECT MULTI FROM ID PTCOMA

    CREATE          shift and go to state 14
    SHOW            shift and go to state 15
    ALTER           shift and go to state 16
    DROP            shift and go to state 17
    DELETE          shift and go to state 18
    INSERT          shift and go to state 19
    UPDATE          shift and go to state 20
    SELECT          shift and go to state 21

    create_type                    shift and go to state 22
    create_db                      shift and go to state 23
    show_db                        shift and go to state 24
    alter_db                       shift and go to state 25
    drop_db                        shift and go to state 26
    create_table                   shift and go to state 27
    drop_table                     shift and go to state 28
    alter_table                    shift and go to state 29
    s_delete                       shift and go to state 30
    s_insert                       shift and go to state 31
    s_update                       shift and go to state 32
    s_select                       shift and go to state 33

state 2

    (13) entrada -> create_type .

    CREATE          reduce using rule 13 (entrada -> create_type .)
    SHOW            reduce using rule 13 (entrada -> create_type .)
    ALTER           reduce using rule 13 (entrada -> create_type .)
    DROP            reduce using rule 13 (entrada -> create_type .)
    DELETE          reduce using rule 13 (entrada -> create_type .)
    INSERT          reduce using rule 13 (entrada -> create_type .)
    UPDATE          reduce using rule 13 (entrada -> create_type .)
    SELECT          reduce using rule 13 (entrada -> create_type .)
    $end            reduce using rule 13 (entrada -> create_type .)


state 3

    (14) entrada -> create_db .

    CREATE          reduce using rule 14 (entrada -> create_db .)
    SHOW            reduce using rule 14 (entrada -> create_db .)
    ALTER           reduce using rule 14 (entrada -> create_db .)
    DROP            reduce using rule 14 (entrada -> create_db .)
    DELETE          reduce using rule 14 (entrada -> create_db .)
    INSERT          reduce using rule 14 (entrada -> create_db .)
    UPDATE          reduce using rule 14 (entrada -> create_db .)
    SELECT          reduce using rule 14 (entrada -> create_db .)
    $end            reduce using rule 14 (entrada -> create_db .)


state 4

    (15) entrada -> show_db .

    CREATE          reduce using rule 15 (entrada -> show_db .)
    SHOW            reduce using rule 15 (entrada -> show_db .)
    ALTER           reduce using rule 15 (entrada -> show_db .)
    DROP            reduce using rule 15 (entrada -> show_db .)
    DELETE          reduce using rule 15 (entrada -> show_db .)
    INSERT          reduce using rule 15 (entrada -> show_db .)
    UPDATE          reduce using rule 15 (entrada -> show_db .)
    SELECT          reduce using rule 15 (entrada -> show_db .)
    $end            reduce using rule 15 (entrada -> show_db .)


state 5

    (16) entrada -> alter_db .

    CREATE          reduce using rule 16 (entrada -> alter_db .)
    SHOW            reduce using rule 16 (entrada -> alter_db .)
    ALTER           reduce using rule 16 (entrada -> alter_db .)
    DROP            reduce using rule 16 (entrada -> alter_db .)
    DELETE          reduce using rule 16 (entrada -> alter_db .)
    INSERT          reduce using rule 16 (entrada -> alter_db .)
    UPDATE          reduce using rule 16 (entrada -> alter_db .)
    SELECT          reduce using rule 16 (entrada -> alter_db .)
    $end            reduce using rule 16 (entrada -> alter_db .)


state 6

    (17) entrada -> drop_db .

    CREATE          reduce using rule 17 (entrada -> drop_db .)
    SHOW            reduce using rule 17 (entrada -> drop_db .)
    ALTER           reduce using rule 17 (entrada -> drop_db .)
    DROP            reduce using rule 17 (entrada -> drop_db .)
    DELETE          reduce using rule 17 (entrada -> drop_db .)
    INSERT          reduce using rule 17 (entrada -> drop_db .)
    UPDATE          reduce using rule 17 (entrada -> drop_db .)
    SELECT          reduce using rule 17 (entrada -> drop_db .)
    $end            reduce using rule 17 (entrada -> drop_db .)


state 7

    (18) entrada -> create_table .

    CREATE          reduce using rule 18 (entrada -> create_table .)
    SHOW            reduce using rule 18 (entrada -> create_table .)
    ALTER           reduce using rule 18 (entrada -> create_table .)
    DROP            reduce using rule 18 (entrada -> create_table .)
    DELETE          reduce using rule 18 (entrada -> create_table .)
    INSERT          reduce using rule 18 (entrada -> create_table .)
    UPDATE          reduce using rule 18 (entrada -> create_table .)
    SELECT          reduce using rule 18 (entrada -> create_table .)
    $end            reduce using rule 18 (entrada -> create_table .)


state 8

    (19) entrada -> drop_table .

    CREATE          reduce using rule 19 (entrada -> drop_table .)
    SHOW            reduce using rule 19 (entrada -> drop_table .)
    ALTER           reduce using rule 19 (entrada -> drop_table .)
    DROP            reduce using rule 19 (entrada -> drop_table .)
    DELETE          reduce using rule 19 (entrada -> drop_table .)
    INSERT          reduce using rule 19 (entrada -> drop_table .)
    UPDATE          reduce using rule 19 (entrada -> drop_table .)
    SELECT          reduce using rule 19 (entrada -> drop_table .)
    $end            reduce using rule 19 (entrada -> drop_table .)


state 9

    (20) entrada -> alter_table .

    CREATE          reduce using rule 20 (entrada -> alter_table .)
    SHOW            reduce using rule 20 (entrada -> alter_table .)
    ALTER           reduce using rule 20 (entrada -> alter_table .)
    DROP            reduce using rule 20 (entrada -> alter_table .)
    DELETE          reduce using rule 20 (entrada -> alter_table .)
    INSERT          reduce using rule 20 (entrada -> alter_table .)
    UPDATE          reduce using rule 20 (entrada -> alter_table .)
    SELECT          reduce using rule 20 (entrada -> alter_table .)
    $end            reduce using rule 20 (entrada -> alter_table .)


state 10

    (21) entrada -> s_delete .

    CREATE          reduce using rule 21 (entrada -> s_delete .)
    SHOW            reduce using rule 21 (entrada -> s_delete .)
    ALTER           reduce using rule 21 (entrada -> s_delete .)
    DROP            reduce using rule 21 (entrada -> s_delete .)
    DELETE          reduce using rule 21 (entrada -> s_delete .)
    INSERT          reduce using rule 21 (entrada -> s_delete .)
    UPDATE          reduce using rule 21 (entrada -> s_delete .)
    SELECT          reduce using rule 21 (entrada -> s_delete .)
    $end            reduce using rule 21 (entrada -> s_delete .)


state 11

    (22) entrada -> s_insert .

    CREATE          reduce using rule 22 (entrada -> s_insert .)
    SHOW            reduce using rule 22 (entrada -> s_insert .)
    ALTER           reduce using rule 22 (entrada -> s_insert .)
    DROP            reduce using rule 22 (entrada -> s_insert .)
    DELETE          reduce using rule 22 (entrada -> s_insert .)
    INSERT          reduce using rule 22 (entrada -> s_insert .)
    UPDATE          reduce using rule 22 (entrada -> s_insert .)
    SELECT          reduce using rule 22 (entrada -> s_insert .)
    $end            reduce using rule 22 (entrada -> s_insert .)


state 12

    (23) entrada -> s_update .

    CREATE          reduce using rule 23 (entrada -> s_update .)
    SHOW            reduce using rule 23 (entrada -> s_update .)
    ALTER           reduce using rule 23 (entrada -> s_update .)
    DROP            reduce using rule 23 (entrada -> s_update .)
    DELETE          reduce using rule 23 (entrada -> s_update .)
    INSERT          reduce using rule 23 (entrada -> s_update .)
    UPDATE          reduce using rule 23 (entrada -> s_update .)
    SELECT          reduce using rule 23 (entrada -> s_update .)
    $end            reduce using rule 23 (entrada -> s_update .)


state 13

    (24) entrada -> s_select .

    CREATE          reduce using rule 24 (entrada -> s_select .)
    SHOW            reduce using rule 24 (entrada -> s_select .)
    ALTER           reduce using rule 24 (entrada -> s_select .)
    DROP            reduce using rule 24 (entrada -> s_select .)
    DELETE          reduce using rule 24 (entrada -> s_select .)
    INSERT          reduce using rule 24 (entrada -> s_select .)
    UPDATE          reduce using rule 24 (entrada -> s_select .)
    SELECT          reduce using rule 24 (entrada -> s_select .)
    $end            reduce using rule 24 (entrada -> s_select .)


state 14

    (26) create_type -> CREATE . TYPE ID AS c_type PTCOMA
    (57) create_db -> CREATE . c_db
    (81) create_table -> CREATE . TABLE ID PARIZQ values PARDER PTCOMA
    (58) c_db -> . OR REPLACE DATABASE c_db1
    (59) c_db -> . DATABASE c_db1

    TYPE            shift and go to state 34
    TABLE           shift and go to state 36
    OR              shift and go to state 37
    DATABASE        shift and go to state 38

    c_db                           shift and go to state 35

state 15

    (70) show_db -> SHOW . DATABASES like_id

    DATABASES       shift and go to state 39


state 16

    (73) alter_db -> ALTER . DATABASE ID al_db PTCOMA
    (114) alter_table -> ALTER . TABLE ID acciones

    DATABASE        shift and go to state 40
    TABLE           shift and go to state 41


state 17

    (79) drop_db -> DROP . DATABASE PTCOMA
    (80) drop_db -> DROP . DATABASE IF EXISTS PTCOMA
    (113) drop_table -> DROP . TABLE ID PTCOMA

    DATABASE        shift and go to state 42
    TABLE           shift and go to state 43


state 18

    (121) s_delete -> DELETE . FROM ID PTCOMA
    (122) s_delete -> DELETE . FROM ID WHERE ID IGUAL expresion PTCOMA

    FROM            shift and go to state 44


state 19

    (123) s_insert -> INSERT . INTO ID PARIZQ lista_id PARDER VALUES lista_values PTCOMA

    INTO            shift and go to state 45


state 20

    (131) s_update -> UPDATE . ID SET lista_asig PTCOMA
    (132) s_update -> UPDATE . ID SET lista_asig WHERE ID IGUAL expresion PTCOMA

    ID              shift and go to state 46


state 21

    (25) s_select -> SELECT . MULTI FROM ID PTCOMA

    MULTI           shift and go to state 47


state 22

    (1) entrada -> entrada create_type .

    CREATE          reduce using rule 1 (entrada -> entrada create_type .)
    SHOW            reduce using rule 1 (entrada -> entrada create_type .)
    ALTER           reduce using rule 1 (entrada -> entrada create_type .)
    DROP            reduce using rule 1 (entrada -> entrada create_type .)
    DELETE          reduce using rule 1 (entrada -> entrada create_type .)
    INSERT          reduce using rule 1 (entrada -> entrada create_type .)
    UPDATE          reduce using rule 1 (entrada -> entrada create_type .)
    SELECT          reduce using rule 1 (entrada -> entrada create_type .)
    $end            reduce using rule 1 (entrada -> entrada create_type .)


state 23

    (2) entrada -> entrada create_db .

    CREATE          reduce using rule 2 (entrada -> entrada create_db .)
    SHOW            reduce using rule 2 (entrada -> entrada create_db .)
    ALTER           reduce using rule 2 (entrada -> entrada create_db .)
    DROP            reduce using rule 2 (entrada -> entrada create_db .)
    DELETE          reduce using rule 2 (entrada -> entrada create_db .)
    INSERT          reduce using rule 2 (entrada -> entrada create_db .)
    UPDATE          reduce using rule 2 (entrada -> entrada create_db .)
    SELECT          reduce using rule 2 (entrada -> entrada create_db .)
    $end            reduce using rule 2 (entrada -> entrada create_db .)


state 24

    (3) entrada -> entrada show_db .

    CREATE          reduce using rule 3 (entrada -> entrada show_db .)
    SHOW            reduce using rule 3 (entrada -> entrada show_db .)
    ALTER           reduce using rule 3 (entrada -> entrada show_db .)
    DROP            reduce using rule 3 (entrada -> entrada show_db .)
    DELETE          reduce using rule 3 (entrada -> entrada show_db .)
    INSERT          reduce using rule 3 (entrada -> entrada show_db .)
    UPDATE          reduce using rule 3 (entrada -> entrada show_db .)
    SELECT          reduce using rule 3 (entrada -> entrada show_db .)
    $end            reduce using rule 3 (entrada -> entrada show_db .)


state 25

    (4) entrada -> entrada alter_db .

    CREATE          reduce using rule 4 (entrada -> entrada alter_db .)
    SHOW            reduce using rule 4 (entrada -> entrada alter_db .)
    ALTER           reduce using rule 4 (entrada -> entrada alter_db .)
    DROP            reduce using rule 4 (entrada -> entrada alter_db .)
    DELETE          reduce using rule 4 (entrada -> entrada alter_db .)
    INSERT          reduce using rule 4 (entrada -> entrada alter_db .)
    UPDATE          reduce using rule 4 (entrada -> entrada alter_db .)
    SELECT          reduce using rule 4 (entrada -> entrada alter_db .)
    $end            reduce using rule 4 (entrada -> entrada alter_db .)


state 26

    (5) entrada -> entrada drop_db .

    CREATE          reduce using rule 5 (entrada -> entrada drop_db .)
    SHOW            reduce using rule 5 (entrada -> entrada drop_db .)
    ALTER           reduce using rule 5 (entrada -> entrada drop_db .)
    DROP            reduce using rule 5 (entrada -> entrada drop_db .)
    DELETE          reduce using rule 5 (entrada -> entrada drop_db .)
    INSERT          reduce using rule 5 (entrada -> entrada drop_db .)
    UPDATE          reduce using rule 5 (entrada -> entrada drop_db .)
    SELECT          reduce using rule 5 (entrada -> entrada drop_db .)
    $end            reduce using rule 5 (entrada -> entrada drop_db .)


state 27

    (6) entrada -> entrada create_table .

    CREATE          reduce using rule 6 (entrada -> entrada create_table .)
    SHOW            reduce using rule 6 (entrada -> entrada create_table .)
    ALTER           reduce using rule 6 (entrada -> entrada create_table .)
    DROP            reduce using rule 6 (entrada -> entrada create_table .)
    DELETE          reduce using rule 6 (entrada -> entrada create_table .)
    INSERT          reduce using rule 6 (entrada -> entrada create_table .)
    UPDATE          reduce using rule 6 (entrada -> entrada create_table .)
    SELECT          reduce using rule 6 (entrada -> entrada create_table .)
    $end            reduce using rule 6 (entrada -> entrada create_table .)


state 28

    (7) entrada -> entrada drop_table .

    CREATE          reduce using rule 7 (entrada -> entrada drop_table .)
    SHOW            reduce using rule 7 (entrada -> entrada drop_table .)
    ALTER           reduce using rule 7 (entrada -> entrada drop_table .)
    DROP            reduce using rule 7 (entrada -> entrada drop_table .)
    DELETE          reduce using rule 7 (entrada -> entrada drop_table .)
    INSERT          reduce using rule 7 (entrada -> entrada drop_table .)
    UPDATE          reduce using rule 7 (entrada -> entrada drop_table .)
    SELECT          reduce using rule 7 (entrada -> entrada drop_table .)
    $end            reduce using rule 7 (entrada -> entrada drop_table .)


state 29

    (8) entrada -> entrada alter_table .

    CREATE          reduce using rule 8 (entrada -> entrada alter_table .)
    SHOW            reduce using rule 8 (entrada -> entrada alter_table .)
    ALTER           reduce using rule 8 (entrada -> entrada alter_table .)
    DROP            reduce using rule 8 (entrada -> entrada alter_table .)
    DELETE          reduce using rule 8 (entrada -> entrada alter_table .)
    INSERT          reduce using rule 8 (entrada -> entrada alter_table .)
    UPDATE          reduce using rule 8 (entrada -> entrada alter_table .)
    SELECT          reduce using rule 8 (entrada -> entrada alter_table .)
    $end            reduce using rule 8 (entrada -> entrada alter_table .)


state 30

    (9) entrada -> entrada s_delete .

    CREATE          reduce using rule 9 (entrada -> entrada s_delete .)
    SHOW            reduce using rule 9 (entrada -> entrada s_delete .)
    ALTER           reduce using rule 9 (entrada -> entrada s_delete .)
    DROP            reduce using rule 9 (entrada -> entrada s_delete .)
    DELETE          reduce using rule 9 (entrada -> entrada s_delete .)
    INSERT          reduce using rule 9 (entrada -> entrada s_delete .)
    UPDATE          reduce using rule 9 (entrada -> entrada s_delete .)
    SELECT          reduce using rule 9 (entrada -> entrada s_delete .)
    $end            reduce using rule 9 (entrada -> entrada s_delete .)


state 31

    (10) entrada -> entrada s_insert .

    CREATE          reduce using rule 10 (entrada -> entrada s_insert .)
    SHOW            reduce using rule 10 (entrada -> entrada s_insert .)
    ALTER           reduce using rule 10 (entrada -> entrada s_insert .)
    DROP            reduce using rule 10 (entrada -> entrada s_insert .)
    DELETE          reduce using rule 10 (entrada -> entrada s_insert .)
    INSERT          reduce using rule 10 (entrada -> entrada s_insert .)
    UPDATE          reduce using rule 10 (entrada -> entrada s_insert .)
    SELECT          reduce using rule 10 (entrada -> entrada s_insert .)
    $end            reduce using rule 10 (entrada -> entrada s_insert .)


state 32

    (11) entrada -> entrada s_update .
